# django-boilerplate

./: .gitignore  .pycodestyle  .pylintrc  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
app/: asgi.py  settings.py  urls.py  wsgi.py
app/management/: common.py
app/management/commands/: black.py  pycodestyle.py  pylint.py  quality.py
